@@ -49,6 +49,14 @@ static gboolean monitor_udev(GIOChannel *iochannel G_GNUC_UNUSED, GIOCondition c
                              gpointer data G_GNUC_UNUSED);
 static void udev_parse(struct udev_device *dev);
 
+static void notify_issue (gpointer data)
+{
+        log_debug("USB connection watch destroyed, restarting it\n!");
+        /* restart trigger */
+        hwal_cleanup();
+	hwal_init();
+}
+
 gboolean hwal_init(void)
 {
   const gchar *udev_path = NULL;
@@ -103,7 +111,7 @@ gboolean hwal_init(void)
   udev_parse(dev);
   
   iochannel = g_io_channel_unix_new(udev_monitor_get_fd(mon));
-  watch_id = g_io_add_watch(iochannel, G_IO_IN, monitor_udev, NULL);
+  watch_id = g_io_add_watch_full(iochannel, 0, G_IO_IN, monitor_udev, NULL,notify_issue);
 
   /* everything went well */
   return TRUE;
